2008-11-25  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/ClassQuickFinder.cs: Removed return type from
	class quick finder.

2008-11-24  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Track search APIs.

2008-11-18  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Use more precise error
	underline positioning when available.

2008-11-17  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Use named colours in
	error/warning markers.

	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: Escape markup in
	error message tooltips.

2008-11-17  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs:
	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: Rename Error to
	ErrorMarker to reduce ambiguity. Track Error API. Use different
	colour for warnings. Tidy up API. Remove unnecessary field from
	ErrorMarker class.

2008-11-14  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Don't add
	TriggerWordLength to the partial_word's length; the latter is all we
	need. Fixes Bug 445388 - Ctrl-space in middle of word sometimes
	overwrites too far.

2008-11-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: fixed 'Bug 444922 -
	Buggy tooltips'.

2008-11-12  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: fixed code completion
	bug.

2008-11-12  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorOptions.cs:
	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs:
	* MonoDevelop.SourceEditor.OptionPanels/BehaviorPanel.cs:
	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.BehaviorPanel.cs:
	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.GeneralOptionsPanel.cs:
	removed auto templates.

2008-11-12  Mike Krüger  <mkrueger@novell.com>
